# Project1

./: README.md  pyproject.toml
src/codex_capability_demo.egg-info/: PKG-INFO  SOURCES.txt
src/codex_demo/: __init__.py  cli.py  core.py
tests/: test_core.py
