[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "codex-capability-demo"
version = "0.1.0"
description = "A simple Python demo project created by Codex."
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "Codex + User" }]
dependencies = []

[project.scripts]
codex-demo = "codex_demo.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
